fix: fixes the image alignment issue in index page

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,9 @@
 }
 
 body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     font-family: 'Sour Gummy'; 
     margin: 0px 0px;
 }
@@ -21,17 +24,34 @@ h1{
 }
 
 .recipes{
-    text-align: center;
+    display: flex;
+    align-items: flex-end;
     border: 2px solid black;
-    margin: 0 20px;
+    margin: 0 20px; 
     padding: 10px;
+    width: fit-content;
+}
+div img{
+    width: 200px;
+    
 }
 
-a{
+
+.indv_recipe{
     display: inline-block;
-    border: 2px solid black;
-    padding: 10px;
+    width: 200px;
     margin: 10px 10px;
-    width: 100px;
-    height: 200px;
+}
+
+.indv_recipe a, h3{
+    background-color: rgb(255, 172, 172);
+    text-decoration: none;
+}
+
+.indv_recipe h3{
+    text-align: center;
+    height: 100px;
+    text-shadow: 2px 2px 10px rgb(129, 73, 73);
+    color: rgb(255, 255, 255);
+    margin-top: 0px;
 }
